  * Bump debhelper compatibility to 9
    + Update versioned debhelper build-dependency
  * Revamp debian/rules:
    + Use dh_auto_{configure,build}
    + Use dh_prep instead of dh_clean -k
    + No more manually clean stamp files, done by dh_clean now
    + Use debian/{docs,manpages,info} instead of dh_install{docs,man,info}
      parameters
    + Remove redundant dh_installchangelogs parameter
  * Apply wrap-and-sort

 -- Axel Beckert <abe@debian.org>  Sun, 16 Jun 2013 02:21:37 +0200

boa (0.94.14rc21-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * debian/control
  - Replace non-existing build dependency (Closes: #562362)

 -- Ricardo Mones <mones@debian.org>  Sun, 24 Jan 2010 13:22:38 +0100

boa (0.94.14rc21-3) unstable; urgency=low

  * Access log garbled (Closes: #449074)
  * Fixed the lfs-support patch, which produced incorrect logfiles on 32
    bits machines, and in the same blow removed all build-time warnings
    which were probably not as harmless as I initially thought.
  * Removed port detection routines. (Closes: #458855)
  * dpkg-www: Invalid characters in input. (Closes: #438707)
  * Removed debconf template and its translations.  This package no
    longer needs debconf.

 -- Francois-Denis Gonthier <neumann@lostwebsite.net>  Thu, 07 Feb 2008 23:15:51 -0500

boa (0.94.14rc21-2) unstable; urgency=low

  * New maintainer (Closes: #406354)
  * The patch for correct LFS support by Eduard Bloch has been
    applied. (Closes: #313020)
  * Switched to quilt for patch management.

 -- Francois-Denis Gonthier <neumann@lostwebsite.net>  Fri, 10 Aug 2007 21:43:54 -0400

boa (0.94.14rc21-1) unstable; urgency=low

  * QA upload. 
  * Set maintainer to QA Group; Orphaned: #406354
  * Conforms with latest Standards Version 3.7.2

 -- Michael Ablassmeier <abi@debian.org>  Tue, 03 Apr 2007 09:41:41 +0200

boa (0.94.14rc21-0.2) unstable; urgency=low

  * Non-maintainer upload
  * Debconf translation updates: